--- a/web/index.html
+++ b/web/index.html
@@ -116,10 +116,10 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-8">
                     <div class="in-content py-6">
-                        <div class="text-center mt-2">
+                        <div class="text-center mt-2" data-aos="fade-up" data-aos-duration="500">
                             <img class="img-fluid" src="assets/img/ui/title.png" alt="">
                         </div>
-                        <div class="px-sm-6 px-3">
+                        <div class="px-sm-6 px-3" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="300">
                             <img class="img-fluid my-4 hidden-sm-down" src="assets/img/ui/quote.png" alt="">
                             <quote class="d-block my-4 text-center hidden-md-up">
                                 碰到重大關鍵問題，必須站在更高層次才能解決問題。<br>
@@ -151,11 +151,11 @@
     <!-- 講者 -->
     <div class="container-fluid push bg-sky" id="speaker">
         <div class="container pt-10">
-            <div class="text-center mb-7">
+            <div class="text-center mb-7" data-aos="fade-up">
                 <img class="img-fluid" src="assets/img/ui/title-speaker.png" srcset="assets/img/ui/title-speaker@2x.png 2x, assets/img/ui/title-speaker@3x.png 3x" alt="講者介紹">
             </div>
             <div class="row justify-content-center">
-                <div class="col-12 col-lg-10 my-3">
+                <div class="col-12 col-lg-10 my-3" data-aos="fade-right">
                     <div class="row no-gutters bg-white bs">
                         <div class="col-xl-3 col-lg-4 col-12 text-center">
                             <img class="img-fluid img-speaker" src="assets/img/uploads/speaker-01.jpg" srcset="assets/img/uploads/speaker-01@2x.jpg 2x" alt="">
@@ -172,22 +172,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-10 my-3">
+                <div class="col-12 col-lg-10 my-3" data-aos="fade-left">
                     <div class="row no-gutters bg-white bs">
                         <div class="col-xl-3 col-lg-4 col-12 text-center push-xl-9 push-lg-8">
                             <img class="img-fluid img-speaker" src="assets/img/uploads/speaker-02.jpg" srcset="assets/img/uploads/speaker-02@2x.jpg 2x" alt="">
                         </div>
                         <div class="col-xl-9 col-lg-8 col-12 p-4 pull-xl-3 pull-lg-4">
-                            <div class="bg-warning text-white d-inline-block px-2">政大商學院特聘教授 </div>
-                            <div class="text-warning my-1">別蓮蒂</div>
+                            <div class="bg-warning text-white d-inline-block px-2">智榮基金會龍吟研論營運總監</div>
+                            <div class="text-warning my-1">李竺姮</div>
                             <ul class="font-smaller m-0 pl-4">
-                                <li>擅長結合心理學與管理學領域，尤其是消費者行為、消費心理學、研究方法、行銷與品牌管理。</li>
-                                <li>美國普度大學消費者行為與零售管理博士，曾任普度大學電腦中心統計顧問、美國普度大學消費者行為與零售管理系研究學者等。</li>
+                                <li>「樂樂活大家講」調查計畫策劃人。</li>
+                                <li>台大國企所博士班，政大企研所碩士，曾任商發院行銷所副所長、TNS Taiwan研究副總監。</li>
+                                <li>從事消費者研究近18年。專長為質性研究、消費者心理與消費行為、生活型態、以及兩岸消費價值觀，研究範疇涵蓋兩岸華人市場與越南、印尼、印度等亞洲新興市場。</li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-10 my-3">
+                <div class="col-12 col-lg-10 my-3" data-aos="fade-right">
                     <div class="row no-gutters bg-white bs">
                         <div class="col-xl-3 col-lg-4 col-12 text-center">
                             <img class="img-fluid img-speaker" src="assets/img/uploads/speaker-03.jpg" srcset="assets/img/uploads/speaker-03@2x.jpg 2x" alt="">
@@ -209,10 +210,10 @@
     <!-- 議程 -->
     <div class="container-fluid push bg-white" id="meeting">
         <div class="container pt-10">
-            <div class="text-center mb-7">
+            <div class="text-center mb-7" data-aos="fade-up">
                 <img class="img-fluid" src="assets/img/ui/title-meeting.png" srcset="assets/img/ui/title-meeting@2x.png 2x, assets/img/ui/title-meeting@3x.png 3x" alt="精彩議程">
             </div>
-            <div class="row justify-content-center">
+            <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="200">
                 <div class="col-12 col-lg-10">
             <table class="table table-striped">
                 <thead>
@@ -234,7 +235,7 @@
                         <td class="text-center px-1">14:10<br>14:25</td>
                         <td class="text-center px-1 hidden-sm-down"><small>15mins</small></td>
                         <td>議題一、長者生活需求引路<br>台灣長者痛點調查及需求大探索</td>
-                        <td>政大商學院特聘教授<br>別蓮蒂</td>
+                        <td>智榮基金會龍吟研論營運總監<br>李竺姮</td>
                     </tr>
                     <tr>
                         <td class="text-center px-1">14:25<br>15:05</td>
@@ -254,7 +255,7 @@
                         <td>雙城交流 Vision 2025<br>高齡趨勢 城市論壇</td>
                         <td>
                             主持人：<br>康健雜誌 總編輯或社長代表<br><br>
-                            與談人：<br>臺中市市長 林佳龍<br>以色列代表 Yael Benvenisti (班維妮絲第)<br>政大商學院特聘教授 別蓮蒂</td>
+                            與談人：<br>臺中市市長 林佳龍<br>以色列代表 Yael Benvenisti (班維妮絲第)<br>智榮基金會龍吟研論營運總監 李竺姮</td>
                     </tr>
                 </tbody>
             </table>
@@ -266,11 +267,11 @@
     <!-- 講座 -->
     <div class="container-fluid push bg-land" id="survey">
         <div class="container py-10">
-            <div class="text-center mb-7">
+            <div class="text-center mb-7" data-aos="fade-up">
                 <img class="img-fluid" src="assets/img/ui/title-join.png" srcset="assets/img/ui/title-join@2x.png 2x, assets/img/ui/title-join@3x.png 3x" alt="講座報名">
             </div>
             <div class="row">
-                <div class="col-12 col-lg-5 mt-3">
+                <div class="col-12 col-lg-5 mt-3" data-aos="flip-left" data-aos-duration="1000" data-aos-delay="200">
                     <div class="box p-2">
                         <div class="media mb-3">
                             <img class="img-fluid d-flex mr-2" src="assets/img/ui/icon-clock.png" srcset="assets/img/ui/icon-clock@2x.png 2x, assets/img/ui/icon-clock@3x.png 3x" alt="">
@@ -298,7 +299,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-7 mt-3">
+                <div class="col-12 col-lg-7 mt-3" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="400">
 
                     <div style="display: block" id="dform-iframe-wrap">
 
