講者議題更新

--- a/web/index.html
+++ b/web/index.html
@@ -129,7 +129,7 @@
                                   2025年全球將成為超高齡社會，國人平均年齡也將往100歲急速邁進，身處其中的你對高齡的想像是什麼？知識與身心的準備是否足夠？
                             </p>
                             <p>
-                                  台中已躍升為全台第2大城市，更是高齡友善的健康宜居城，此次台中市政府特別邀請以色列Aging政策推手班維妮絲第 Yael Benvenisti與市民分享國際經驗談。11月22日，邀請你帶著所愛的人，一起學習用新視野面對老問題！
+                                  台中已躍升為全台第2大城市，更是高齡友善的健康宜居城，此次台中市政府特別邀請以色列Aging政策幕後推手及議題倡議先驅班維妮絲第 Yael Benvenisti與市民分享國際經驗談。11月22日，邀請你帶著所愛的人，一起學習用新視野面對老問題！
                             </p>
                             <div class="text-right">
                                 <small>臺中市政府社會局廣告</small>
@@ -226,36 +226,40 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="text-center px-1">14:00<br>14:10</td>
+                        <td class="text-center px-1">14:00<br>14:05</td>
                         <td class="text-center px-1 hidden-sm-down"><small>10mins</small></td>
-                        <td>市長致歡迎辭</td>
-                        <td>臺中市市長<br>林佳龍</td>
+                        <td>致歡迎辭</td>
+                        <td>
+                            康健雜誌社長 李瑟<br>
+                            臺中市市長 林佳龍
+                        </td>
                     </tr>
                     <tr>
                         <td class="text-center px-1">14:10<br>14:25</td>
                         <td class="text-center px-1 hidden-sm-down"><small>15mins</small></td>
-                        <td>議題一、長者生活需求引路<br>台灣長者痛點調查及需求大探索</td>
-                        <td>智榮基金會龍吟研論營運總監<br>李竺姮</td>
+                        <td><strong class="text-primary">長者生活需求引路</strong><br>台灣長者痛點調查及需求大探索</td>
+                        <td>李竺姮/ 智榮基金會龍吟研論營運總監<br>「樂樂活大家講」調查計畫策劃人</td>
                     </tr>
                     <tr>
                         <td class="text-center px-1">14:25<br>15:05</td>
                         <td class="text-center px-1 hidden-sm-down"><small>40mins</small></td>
-                        <td>議題二、以色列國際經驗<br>打造下一世代的幸福高齡城</td>
-                        <td>以色列Aging推手<br>Yael Benvenisti (班維妮絲第) </td>
+                        <td><strong class="text-primary">以色列國際經驗</strong><br>打造下一世代的幸福高齡城</td>
+                        <td>以色列Aging政策幕後推手及議題倡議先驅<br>Yael Benvenisti (班維妮絲第) </td>
                     </tr>
                     <tr>
                         <td class="text-center px-1">15:05<br>15:40</td>
                         <td class="text-center px-1 hidden-sm-down"><small>40mins</small></td>
-                        <td>議題三、無齡台中進行式<br>生活首都  橘世代宜居城</td>
-                        <td>臺中市市長<br>林佳龍</td>
+                        <td><strong class="text-primary">無齡台中進行式</strong><br>生活首都  橘世代宜居城</td>
+                        <td>臺中市市長 林佳龍</td>
                     </tr>
                     <tr>
                         <td class="text-center px-1">15:40<br>16:40</td>
                         <td class="text-center px-1 hidden-sm-down"><small>60mins</small></td>
-                        <td>雙城交流 Vision 2025<br>高齡趨勢 城市論壇</td>
+                        <td><strong class="text-primary">雙城交流 Vision 2025</strong><br>高齡趨勢 城市論壇</td>
                         <td>
-                            主持人：<br>康健雜誌 總編輯或社長代表<br><br>
-                            與談人：<br>臺中市市長 林佳龍<br>以色列代表 Yael Benvenisti (班維妮絲第)<br>智榮基金會龍吟研論營運總監 李竺姮</td>
+                            主持人：<br>康健雜誌社長 李瑟<br><br>
+                            與談人：<br>臺中市市長 林佳龍<br>以色列Aging政策幕後推手及議題倡議先驅<br>Yael Benvenisti (班維妮絲第)<br>李竺姮/ 智榮基金會龍吟研論營運總監、<br>「樂樂活大家講」調查計畫策劃人
+                        </td>
                     </tr>
                 </tbody>
             </table>
@@ -284,7 +288,7 @@
                             <img class="img-fluid d-flex mr-2" src="assets/img/ui/icon-location.png" srcset="assets/img/ui/icon-location@2x.png 2x, assets/img/ui/icon-location@3x.png 3x" alt="">
                             <div class="media-body">
                                 <div class="lead text-info font-weight-bold">講座地點</div>
-                                裕元花園酒店國際演講廳  台中市西屯區台灣大道四段610號(地點暫定)
+                                裕元花園酒店國際演講廳  台中市西屯區台灣大道四段610號
                             </div>
                         </div>
                         <div class="media mb-3">
