--- a/web/index.html
+++ b/web/index.html
@@ -161,7 +161,7 @@
                             <img class="img-fluid img-speaker" src="assets/img/uploads/speaker-01.jpg" srcset="assets/img/uploads/speaker-01@2x.jpg 2x" alt="">
                         </div>
                         <div class="col-xl-9 col-lg-8 col-12 p-4">
-                            <div class="bg-warning text-white d-inline-block px-2">以色列高齡專家代表</div>
+                            <div class="bg-warning text-white d-inline-block px-2">以色列Aging政策幕後推手及議題倡議先驅</div>
                             <div class="text-warning my-1">班維妮絲第 Yael Benvenisti</div>
                             <ul class="font-smaller m-0 pl-4">
                                 <li>以色列地中海陶爾斯創投公司共同執行長、Technologies of Aging Well總裁</li>
@@ -198,7 +198,7 @@
                             <div class="text-warning my-1">林佳龍</div>
                             <ul class="font-smaller m-0 pl-4">
                                 <li>現任臺中市市長，畢業於建中、台大，取得美國耶魯大學政治學博士。</li>
-                                <li>林佳龍，生於台北市艋舺，民主進步黨籍。</li>
+                                <li>臺中擁有和煦的氣候、優越的地理位置、便捷的生活機能及特有的文化創意，成為「以人為本」的怡居宜居城市。透過政策領先，實施多項幼兒津貼及補助，及高齡友善的養老環境打造等，讓市民從0歲至100歲，都能在臺中養兒育女、照顧父母，直到在這邊退休養老，讓臺中真正成為饒富創意的怡居宜居生活首都。</li>
                             </ul>
                         </div>
                     </div>
@@ -235,30 +235,32 @@
                         </td>
                     </tr>
                     <tr>
-                        <td class="text-center px-1">14:10<br>14:25</td>
+                        <td class="text-center px-1">14:05<br>14:20</td>
                         <td class="text-center px-1 hidden-sm-down"><small>15mins</small></td>
                         <td><strong class="text-primary">長者生活需求引路</strong><br>台灣長者痛點調查及需求大探索</td>
-                        <td>李竺姮/ 智榮基金會龍吟研論營運總監<br>「樂樂活大家講」調查計畫策劃人</td>
+                        <td>智榮基金會龍吟研論營運總監 李竺姮</td>
                     </tr>
                     <tr>
-                        <td class="text-center px-1">14:25<br>15:05</td>
-                        <td class="text-center px-1 hidden-sm-down"><small>40mins</small></td>
+                        <td class="text-center px-1">14:20<br>14:50</td>
+                        <td class="text-center px-1 hidden-sm-down"><small>30mins</small></td>
                         <td><strong class="text-primary">以色列國際經驗</strong><br>打造下一世代的幸福高齡城</td>
-                        <td>以色列Aging政策幕後推手及議題倡議先驅<br>Yael Benvenisti (班維妮絲第) </td>
+                        <td>以色列代表 Yael Benvenisti (班維妮絲第)</td>
                     </tr>
                     <tr>
-                        <td class="text-center px-1">15:05<br>15:40</td>
-                        <td class="text-center px-1 hidden-sm-down"><small>40mins</small></td>
+                        <td class="text-center px-1">14:50<br>15:20</td>
+                        <td class="text-center px-1 hidden-sm-down"><small>30mins</small></td>
                         <td><strong class="text-primary">無齡台中進行式</strong><br>生活首都  橘世代宜居城</td>
                         <td>臺中市市長 林佳龍</td>
                     </tr>
                     <tr>
-                        <td class="text-center px-1">15:40<br>16:40</td>
-                        <td class="text-center px-1 hidden-sm-down"><small>60mins</small></td>
+                        <td class="text-center px-1">15:20<br>16:00</td>
+                        <td class="text-center px-1 hidden-sm-down"><small>40mins</small></td>
                         <td><strong class="text-primary">雙城交流 Vision 2025</strong><br>高齡趨勢 城市論壇</td>
                         <td>
                             主持人：<br>康健雜誌社長 李瑟<br><br>
-                            與談人：<br>臺中市市長 林佳龍<br>以色列Aging政策幕後推手及議題倡議先驅<br>Yael Benvenisti (班維妮絲第)<br>李竺姮/ 智榮基金會龍吟研論營運總監、<br>「樂樂活大家講」調查計畫策劃人
+                            與談人：<br>臺中市市長 林佳龍<br>
+                            以色列代表 Yael Benvenisti (班維妮絲第)<br>
+                            智榮基金會龍吟研論營運總監 李竺姮
                         </td>
                     </tr>
                 </tbody>
@@ -281,7 +283,7 @@
                             <img class="img-fluid d-flex mr-2" src="assets/img/ui/icon-clock.png" srcset="assets/img/ui/icon-clock@2x.png 2x, assets/img/ui/icon-clock@3x.png 3x" alt="">
                             <div class="media-body">
                                 <div class="lead text-warning-dark font-weight-bold">講座時間</div>
-                                2017年11月22日(三) 14:00-16:40 (13:30開放入場)
+                                2017年11月22日(三) 14:00-16:00 (13:30開放入場)
                             </div>
                         </div>
                         <div class="media mb-3">
@@ -295,11 +297,27 @@
                             <img class="img-fluid d-flex mr-2" src="assets/img/ui/icon-info.png" srcset="assets/img/ui/icon-info@2x.png 2x, assets/img/ui/icon-info@3x.png 3x" alt="">
                             <div class="media-body">
                                 <div class="lead text-success font-weight-bold">活動資訊</div>
-                                現場前100位報到入場者(需先線上報名)，贈送早鳥禮-康健雜誌暢銷專刊乙本。(每人限一本)
+                                <img class="img-fluid float-right ml-2" src="assets/img/uploads/book.jpg" srcset="assets/img/uploads/book@2x.jpg 2x, assets/img/uploads/book@3x.jpg 3x" width="80" alt="">
+                                現場前100位報到入場者(需先線上報名)，贈送早鳥禮-2018熊健康節氣年曆乙本。(每人限一本)<br>
                             </div>
                         </div>
                         <div class="alert m-0 p-1">
                             本活動免費參加，名額有限，請盡速報名，如當天座位額滿，為維護講座品質，不再開放進場。
+                        </div>
+                    </div>
+                    <div class="row no-gutters my-2">
+                        <div class="col-12 my-2">
+                            <div class="lead">立即分享</div>
+                        </div>
+                        <div class="col">
+                            <a gtm-name="分享Facebook" class="btn btn-block btn-fb py-0" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//topic.commonhealth.com.tw/2017taichung/">
+                                <img src="assets/img/ui/icon-share-fb.png" srcset="assets/img/ui/icon-share-fb@2x.png 2x, assets/img/ui/icon-share-fb@3x.png 3x" alt="">
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a gtm-name="分享Line" class="btn btn-block btn-line py-0" target="_blank" href="http://line.naver.jp/R/msg/text/?http://topic.commonhealth.com.tw/2017taichung/">
+                                <img src="assets/img/ui/icon-share-line.png" srcset="assets/img/ui/icon-share-line@2x.png 2x, assets/img/ui/icon-share-line@3x.png 3x" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -351,6 +369,12 @@
         </div>
 
                 </div>
+                <div class="col-12">
+                    <small>
+                        特別聲明：我已詳細閱讀並同意以下條款：
+                        我同意成為天下雜誌集團會員（天下雜誌股份有限公司、天下生活出版股份有限公司、親子天下股份有限公司、財團法人天下雜誌教育基金會、天宇股份有限公司，以下簡稱本集團）。天下雜誌集團及其委外服務廠商，基於客戶管理、統計及調查分析、會員管理、行銷及其他合於營業登記項目或章程所定業務需要之特定目的，在此向您蒐集以上個人資料，作為本集團營運期間於台灣地區寄送出版物及各項優惠訊息與調查分析使用。您可向本集團請求查閱、提供複本、更正或補充個人資訊，及請求刪除或停止處理利用，請您連繫天下雜誌群客戶服務中心(02)2662-0332 或email: bill@cw.com.tw。若您填寫資料不完整時，可能會影響您收受出版物或優惠訊息之權利。
+                    </small>
+                </div>
             </div>
         </div>
     </div>
@@ -387,6 +411,28 @@
     Copyright © 2017 康健雜誌. <br>All rights reserved. 版權所有，禁止擅自轉貼節錄
   </div>
 </div>
+    </div>
+
+    <div class="fixed-bottom hidden-md-up">
+        <div class="row">
+            <div class="col px-0">
+                <a gtm-name="分享Facebook" class="btn btn-block btn-fb py-0" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//topic.commonhealth.com.tw/2017taichung/">
+                    <img src="assets/img/ui/icon-share-fb.png" srcset="assets/img/ui/icon-share-fb@2x.png 2x, assets/img/ui/icon-share-fb@3x.png 3x" alt="">
+                </a>
+            </div>
+            <div class="col px-0">
+                <a gtm-name="分享Line" class="btn btn-block btn-line py-0" target="_blank" href="http://line.naver.jp/R/msg/text/?http://topic.commonhealth.com.tw/2017taichung/">
+                    <img src="assets/img/ui/icon-share-line.png" srcset="assets/img/ui/icon-share-line@2x.png 2x, assets/img/ui/icon-share-line@3x.png 3x" alt="">
+                </a>
+            </div>
+<!--
+            <div class="col-4 px-0">
+                <a gtm-name="分享Google" class="btn btn-block btn-google py-0" target="_blank" href="https://plus.google.com/share?url=topic.commonhealth.com.tw/2017taichung/">
+                    <img src="assets/img/ui/icon-share-google.png" srcset="assets/img/ui/icon-share-google@2x.png 2x, assets/img/ui/icon-share-google@3x.png 3x" alt="">
+                </a>
+            </div>
+-->
+        </div>
     </div>
 
     <!-- Common -->
