--- a/web/index.html
+++ b/web/index.html
@@ -215,7 +215,7 @@
             </div>
             <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="200">
                 <div class="col-12 col-lg-10">
-            <table class="table table-striped">
+            <table class="table table-striped table-sm">
                 <thead>
                     <tr class="bg-warning">
                         <th class="text-center" width="12%" nowrap>時間</th>
@@ -226,35 +226,39 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="text-center px-1">14:00<br>14:05</td>
-                        <td class="text-center px-1 hidden-sm-down"><small>10mins</small></td>
+                        <td class="text-center px-1">14:00<br>14:30</td>
+                        <td class="text-center px-1 hidden-sm-down">&nbsp;</td>
+                        <td colspan="2">開始入場</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center px-1">14:30<br>14:35</td>
+                        <td class="text-center px-1 hidden-sm-down"><small>5mins</small></td>
                         <td>致歡迎辭</td>
                         <td>
-                            康健雜誌社長 李瑟<br>
-                            臺中市市長 林佳龍
+                            康健雜誌社長 李瑟
                         </td>
                     </tr>
                     <tr>
-                        <td class="text-center px-1">14:05<br>14:20</td>
+                        <td class="text-center px-1">14:35<br>14:50</td>
                         <td class="text-center px-1 hidden-sm-down"><small>15mins</small></td>
                         <td><strong class="text-primary">長者生活需求引路</strong><br>台灣長者痛點調查及需求大探索</td>
                         <td>智榮基金會龍吟研論營運總監 李竺姮</td>
                     </tr>
                     <tr>
-                        <td class="text-center px-1">14:20<br>14:50</td>
-                        <td class="text-center px-1 hidden-sm-down"><small>30mins</small></td>
+                        <td class="text-center px-1">14:50<br>15:30</td>
+                        <td class="text-center px-1 hidden-sm-down"><small>40mins</small></td>
                         <td><strong class="text-primary">以色列國際經驗</strong><br>打造下一世代的幸福高齡城</td>
                         <td>以色列代表 Yael Benvenisti (班維妮絲第)</td>
                     </tr>
                     <tr>
-                        <td class="text-center px-1">14:50<br>15:20</td>
-                        <td class="text-center px-1 hidden-sm-down"><small>30mins</small></td>
+                        <td class="text-center px-1">15:30<br>16:10</td>
+                        <td class="text-center px-1 hidden-sm-down"><small>40mins</small></td>
                         <td><strong class="text-primary">無齡台中進行式</strong><br>生活首都  橘世代宜居城</td>
                         <td>臺中市市長 林佳龍</td>
                     </tr>
                     <tr>
-                        <td class="text-center px-1">15:20<br>16:00</td>
-                        <td class="text-center px-1 hidden-sm-down"><small>40mins</small></td>
+                        <td class="text-center px-1">16:10<br>17:10</td>
+                        <td class="text-center px-1 hidden-sm-down"><small>60mins</small></td>
                         <td><strong class="text-primary">雙城交流 Vision 2025</strong><br>高齡趨勢 城市論壇</td>
                         <td>
                             主持人：<br>康健雜誌社長 李瑟<br><br>
@@ -283,7 +287,7 @@
                             <img class="img-fluid d-flex mr-2" src="assets/img/ui/icon-clock.png" srcset="assets/img/ui/icon-clock@2x.png 2x, assets/img/ui/icon-clock@3x.png 3x" alt="">
                             <div class="media-body">
                                 <div class="lead text-warning-dark font-weight-bold">講座時間</div>
-                                2017年11月22日(三) 14:00-16:00 (13:30開放入場)
+                                2017年11月22日(三) 14:00-17:10 (14:00開放入場)
                             </div>
                         </div>
                         <div class="media mb-3">
@@ -298,7 +302,7 @@
                             <div class="media-body">
                                 <div class="lead text-success font-weight-bold">活動資訊</div>
                                 <img class="img-fluid float-right ml-2" src="assets/img/uploads/book.jpg" srcset="assets/img/uploads/book@2x.jpg 2x, assets/img/uploads/book@3x.jpg 3x" width="80" alt="">
-                                現場前100位報到入場者(需先線上報名)，贈送早鳥禮-2018熊健康節氣年曆乙本。(每人限一本)<br>
+                                參加現場活動(須事先線上報名),即可獲贈2018熊健康節氣年曆乙本。（限量300份,送完為止)<br>
                             </div>
                         </div>
                         <div class="alert m-0 p-1">
