--- a/ad/output/preview_bn.html
+++ b/ad/output/preview_bn.html
@@ -10,13 +10,13 @@ body {background:#eee; text-align:center;}
 
 <body>
 <h2>260x400</h2>
-<img src="bn_260x400.jpg">
+<img src="bn_260x400.gif">
 <hr>
 <h2>300x100</h2>
-<img src="bn_300x100.jpg">
+<img src="bn_300x100.gif">
 <hr>
 <h2>320x100</h2>
-<img src="bn_320x100.jpg">
+<img src="bn_320x100.gif">
 <hr>
 <h2>300x250</h2>
 <img src="bn_300x250.gif">
