--- a/web/index.html
+++ b/web/index.html
@@ -262,7 +262,7 @@
                         <td><strong class="text-primary">雙城交流 Vision 2025</strong><br>高齡趨勢 城市論壇</td>
                         <td>
                             主持人：<br>康健雜誌社長 李瑟<br><br>
-                            與談人：<br>臺中市市長 林佳龍<br>
+                            與談人：<br>臺中市市長/局處代表<br>
                             以色列代表 Yael Benvenisti (班維妮絲第)<br>
                             智榮基金會龍吟研論營運總監 李竺姮
                         </td>
