--- a/web/edm/edm2.html
+++ b/web/edm/edm2.html
@@ -31,13 +31,20 @@
     </tr>
       <tr>
         <td height="113" background="images/bg-sky.jpg" align="center">
-          <h1 style="font-family: 'Microsoft JhengHei', '微軟正黑體'">特邀國際重量級講者</h1>
+          <h1 style="font-family: 'Microsoft JhengHei', '微軟正黑體'">特邀國際重量級講者  與  林佳龍市長對談</h1>
           </td>
       </tr>
       <tr>
         <td>
           <a href="https://goo.gl/JZ2xeV" target="_blank">
                 <img src="images/speaker-01.jpg" alt="2017無齡台中進行式" width="750" height="217" border="0">
+            </a>
+          </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://goo.gl/JZ2xeV" target="_blank">
+                <img src="images/speaker-02.jpg" alt="2017無齡台中進行式" width="750" height="226" border="0">
             </a>
           </td>
       </tr>
