--- a/web/index.html
+++ b/web/index.html
@@ -383,7 +383,7 @@
         </div>
     </div>
 
-    <div class="container-fluid pb-4 push">
+    <div class="container-fluid pb-10 pb-md-4 push">
         <div class="container py-10">
             <div class="text-center">
                 <div class="d-inline-block mx-4 my-2">
