--- a/ad/output/preview_bn.html
+++ b/ad/output/preview_bn.html
@@ -27,5 +27,9 @@ body {background:#eee; text-align:center;}
 <h2>Line</h2>
 <img src="line_1040x1040_1.jpg">
 <img src="line_1040x1040_2.jpg">
+    <hr>
+    <h2>台中市政府</h2>
+    <img src="bn_800x400.jpg"><br>
+    <img src="bn_560x160.jpg">
 </body>
 </html>
