--- a/ad/output/preview_bn.html
+++ b/ad/output/preview_bn.html
@@ -21,6 +21,9 @@ body {background:#eee; text-align:center;}
 <h2>300x250</h2>
 <img src="bn_300x250.gif">
 <hr>
+    <h2>336x280</h2>
+<img src="bn_336x280.gif">
+<hr>
 <h2>300x600</h2>
 <img src="bn_300x600.gif">
 <hr>
