--- a/ad/output/preview_bn.html
+++ b/ad/output/preview_bn.html
@@ -32,6 +32,7 @@ body {background:#eee; text-align:center;}
 <img src="line_1040x1040_2.jpg">
     <hr>
     <h2>台中市政府</h2>
+    <img src="bn_800x450.jpg"><br>
     <img src="bn_800x400.jpg"><br>
     <img src="bn_560x160.jpg">
 </body>
