--- a/web/edm/edm2.html
+++ b/web/edm/edm2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>為愛重生接立路跑</title>
+<title>Vision 2025高齡論壇～2017無齡台中進行式</title>
 <!--控制手機顯示比例固定-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="http://www.commonhealth.com.tw/images/favicon.ico">
@@ -25,40 +25,40 @@
     <tr>
       <td style="border: 0px; padding: 0px; margin: 0px;font-size:0px;line-height:0px;">
           <a href="https://goo.gl/JZ2xeV" target="_blank">
-              <img src="images/kv.jpg" alt="2017無齡台中進行式" width="750" height="624" border="0" />
+              <img src="http://topic.commonhealth.com.tw/2017taichung/images/kv.jpg" alt="2017無齡台中進行式" width="750" height="624" border="0" />
           </a>
         </td>
     </tr>
       <tr>
-        <td height="113" background="images/bg-sky.jpg" align="center">
+        <td height="113" background="http://topic.commonhealth.com.tw/2017taichung/images/bg-sky.jpg" align="center">
           <h1 style="font-family: 'Microsoft JhengHei', '微軟正黑體'">特邀國際重量級講者  與  林佳龍市長對談</h1>
           </td>
       </tr>
       <tr>
         <td>
           <a href="https://goo.gl/JZ2xeV" target="_blank">
-                <img src="images/speaker-01.jpg" alt="2017無齡台中進行式" width="750" height="217" border="0">
+                <img src="http://topic.commonhealth.com.tw/2017taichung/images/speaker-01.jpg" alt="2017無齡台中進行式" width="750" height="217" border="0">
             </a>
           </td>
       </tr>
       <tr>
         <td>
           <a href="https://goo.gl/JZ2xeV" target="_blank">
-                <img src="images/speaker-02.jpg" alt="2017無齡台中進行式" width="750" height="226" border="0">
+                <img src="http://topic.commonhealth.com.tw/2017taichung/images/speaker-02.jpg" alt="2017無齡台中進行式" width="750" height="226" border="0">
             </a>
           </td>
       </tr>
       <tr>
         <td>
             <a href="https://goo.gl/JZ2xeV" target="_blank">
-                <img src="images/meeting.gif" alt="2017無齡台中進行式" width="750" height="461" border="0">
+                <img src="http://topic.commonhealth.com.tw/2017taichung/images/meeting.gif" alt="2017無齡台中進行式" width="750" height="461" border="0">
             </a>
           </td>
       </tr>
       <tr>
         <td height="150" align="center">
             <a href="https://goo.gl/JZ2xeV" target="_blank">
-                <img src="images/btn.gif" alt="2017無齡台中進行式" width="710" height="90" border="0">
+                <img src="http://topic.commonhealth.com.tw/2017taichung/images/btn.gif" alt="2017無齡台中進行式" width="710" height="90" border="0">
             </a>
           </td>
       </tr>
