--- a/web/index.html
+++ b/web/index.html
@@ -412,7 +412,7 @@
     </ul>
   </div>
   <div class="commonhealth_footer-copyright">
-    Copyright © 2017 康健雜誌. <br>All rights reserved. 版權所有，禁止擅自轉貼節錄
+    Copyright © 2017康健雜誌整合傳播部. <br>All rights reserved. 版權所有，禁止擅自轉貼節錄
   </div>
 </div>
     </div>
