--- a/web/index.html
+++ b/web/index.html
@@ -302,7 +302,7 @@
                             <div class="media-body">
                                 <div class="lead text-success font-weight-bold">活動資訊</div>
                                 <img class="img-fluid float-right ml-2" src="assets/img/uploads/book.jpg" srcset="assets/img/uploads/book@2x.jpg 2x, assets/img/uploads/book@3x.jpg 3x" width="80" alt="">
-                                參加現場活動(須事先線上報名),即可獲贈2018熊健康節氣年曆乙本。（限量300份,送完為止)<br>
+                                【現場備用免費同步翻譯設備】，參加現場活動(須事先線上報名),即可獲贈2018熊健康節氣年曆乙本。（限量300份,送完為止)
                             </div>
                         </div>
                         <div class="alert m-0 p-1">
