--- a/web/index-new.html
+++ b/web/index-new.html
@@ -327,9 +327,6 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-7 mt-3" data-aos="flip-right" data-aos-duration="1000" data-aos-delay="400">
-                    <div class="overlay">
-                        報名已經額滿，<br>感謝您的支持！
-                    </div>
 
                     <div style="display: block" id="dform-iframe-wrap">
 
@@ -371,7 +368,7 @@
 
             <!-- for transparent background, set allowtransparency = "true", false otherwise -->
             <!-- for borderless frame, set frameborder = "0" -->
-            <iframe id="contentFrame" target="_top"  allowtransparency="true" frameborder="0" src="content.html" onload="calcHeight();"></iframe>
+            <iframe id="contentFrame" target="_top"  allowtransparency="true" frameborder="0" src="content-new.html" onload="calcHeight();"></iframe>
 
             <!-- END -->
         </div>
@@ -433,13 +430,6 @@
                     <img src="assets/img/ui/icon-share-line.png" srcset="assets/img/ui/icon-share-line@2x.png 2x, assets/img/ui/icon-share-line@3x.png 3x" alt="">
                 </a>
             </div>
-<!--
-            <div class="col-4 px-0">
-                <a gtm-name="分享Google" class="btn btn-block btn-google py-0" target="_blank" href="https://plus.google.com/share?url=topic.commonhealth.com.tw/2017taichung/">
-                    <img src="assets/img/ui/icon-share-google.png" srcset="assets/img/ui/icon-share-google@2x.png 2x, assets/img/ui/icon-share-google@3x.png 3x" alt="">
-                </a>
-            </div>
--->
         </div>
     </div>
 
